--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,14 +1,7 @@
 FROM node:alpine
-
-EXPOSE 5173
-
 WORKDIR /app
-
-ENV VITE_API_URL=http://127.0.0.1:8000
-
 COPY . .
-
-RUN npm i
-
-CMD ["npm", "run", "dev"]
-
+ENV VITE_API_URL=http://127.0.0.1:8000
+RUN npm ci
+CMD ["npx", "vite", "--host"]
+EXPOSE 3000
